RESOLVED FIXED279181
A service worker should be able to focus a page that is not yet loaded
https://bugs.webkit.org/show_bug.cgi?id=279181
Summary A service worker should be able to focus a page that is not yet loaded
youenn fablet
Reported 2024-09-05 04:52:04 PDT
A service worker should be able to focus a page that is not yet loaded
Attachments
Radar WebKit Bug Importer
Comment 1 2024-09-05 04:52:31 PDT
youenn fablet
Comment 2 2024-09-05 04:52:50 PDT
youenn fablet
Comment 3 2024-09-05 05:06:11 PDT
EWS
Comment 4 2024-09-06 03:55:33 PDT
Committed 283263@main (29c19d789902): <https://commits.webkit.org/283263@main> Reviewed commits have been landed. Closing PR #33177 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.